tests/snapshots/run_wpt_conformance__coreml_conv2d_float16_4D_input_and_filter_tensors_1D_options_bias.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv2d.https.any.js conv2d float16 4D input and filter tensors 1D options.bias, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983270539_0_F2476CDF-F69A-40B4-9741-45B8091381C2.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    conv2dInput: f16[2, 1, 3, 3];
  }

  consts {
    operand_0: f16[3] @bytes([130, 58, 183, 58, 233, 55]);
    operand_1: f16[3, 1, 2, 2] @bytes([167, 48, 189, 59, 239, 46, 32, 53, 144, 57, 15, 56, 54, 45, 62, 56, 234, 52, 235, 54, 225, 59, 218, 54]);
  }

  nodes {
    [conv2dOutput] = conv2d(conv2dInput, operand_1, operand_0, bias=0, dilations=[], filterLayout="", groups=1, inputLayout="", label="", padding=[], strides=[]);
  }

  outputs { conv2dOutput; }
}
Error(s) occurred compiling MIL to BNNS graph:
[CreateBnnsGraphProgramFromMIL]: BNNS failed to compile due to an exception: Metadata data type does not match requested type. at location 
 @ CreateBnnsGraphProgramFromMIL
