tests/snapshots/run_wpt_conformance__coreml_convTranspose2d_float16_4D_both_input_and_filter_constant_tensors_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv_transpose2d.https.any.js convTranspose2d float16 4D both input and filter constant tensors default options, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983271494_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[1, 1, 2, 2] @bytes([69, 53, 178, 56, 193, 52, 214, 26]);
    operand_1: f16[1, 1, 2, 2] @bytes([179, 56, 221, 56, 109, 36, 47, 52]);
  }

  nodes {
    [convTranspose2dOutput] = convTranspose2d(operand_1, operand_0, bias=null, dilations=[], filterLayout="", groups=1, inputLayout="", label="", outputPadding=[], outputSizes=null, padding=[], strides=[]);
  }

  outputs { convTranspose2dOutput; }
}
Error(s) occurred compiling MIL to BNNS graph:
[CreateBnnsGraphProgramFromMIL]: BNNS failed to compile due to an exception: Storage Reader expects file format version 2. at location 
 @ CreateBnnsGraphProgramFromMIL
